# AoC_2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  eight.cpp  eleven.cpp  eleven_p2.cpp  five.cpp  four.cpp  nine.cpp  one.cpp  seven.cpp  six.cpp  ten.cpp  three.cpp  two.cpp
